--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,19 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "screenshots": [
+   {
+       "src": "icons/IMG_1366.png",
+      "sizes": "192x192",
+      "type": "image/png",
+     "form_factor": "narrow"
+   },
+   {
+     "src": "icons/IMG_1365.png",
+      "sizes": "512x512",
+      "type": "image/png",
+     "form_factor": "wide"
+   }
+ ]
 }
