--- a/ParkingWeb/manifest.json
+++ b/ParkingWeb/manifest.json
@@ -1,1 +1,35 @@
-maniest
+{
+  "name": "Parking App",
+  "short_name": "Parking",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#007bff",
+  "description": "Parking Slot Manager",
+  "icons": [
+    {
+      "src": "icons/IMG_1366.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/IMG_1365.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "screenshots": [
+   {
+       "src": "icons/IMG_1366.png",
+      "sizes": "192x192",
+      "type": "image/png",
+     "form_factor": "narrow"
+   },
+   {
+     "src": "icons/IMG_1365.png",
+      "sizes": "512x512",
+      "type": "image/png",
+     "form_factor": "wide"
+   }
+ ]
+}
